--- a/.gitignore
+++ b/.gitignore
@@ -14,23 +14,13 @@
 .cxx
 local.properties
 
-app/src/main/res/drawable-v24/cat_three_five.gif
-app/src/main/res/drawable-v24/cat_three_four.gif
-app/src/main/res/drawable-v24/cat_three_one.gif
-app/src/main/res/drawable-v24/cat_three_three.gif
-app/src/main/res/drawable-v24/cat_three_two.gif
+# app/src/main/res/drawable-v24/cat_three_five.gif
+# app/src/main/res/drawable-v24/cat_three_four.gif
+# app/src/main/res/drawable-v24/cat_three_one.gif
+# app/src/main/res/drawable-v24/cat_three_three.gif
+# app/src/main/res/drawable-v24/cat_three_two.gif
 app/src/main/res/drawable-v24/cat_two_five.gif
-app/src/main/res/drawable-v24/cat_two_four.gif
 app/src/main/res/drawable-v24/cat_two_one.gif
 app/src/main/res/drawable-v24/cat_two_three.gif
 app/src/main/res/drawable-v24/cat_two_two.gif
-app/src/main/res/drawable/cat_one_one.gif
-app/src/main/res/drawable-v24/cat_one_three.gif
-app/src/main/res/drawable-v24/cat_one_two.gif
-app/src/main/res/drawable/cat_one_one.gif
-app/src/main/res/drawable-v24/cat_one_three.gif
-app/src/main/res/drawable-v24/cat_one_two.gif
-app/src/main/res/drawable/cat_one_one.gif
-app/src/main/res/drawable-v24/cat_one_three.gif
-app/src/main/res/drawable-v24/cat_one_two.gif
-app/src/main/res/drawable/cat_one_one.gif
+app/src/main/res/drawable-v24/cat_two_four.gif
